--- a/closd/data/cfg/env/closd_t2m.yaml
+++ b/closd/data/cfg/env/closd_t2m.yaml
@@ -6,8 +6,12 @@ episode_length: 300
 
 dip:
   model_path: closd/diffusion_planner/save/DiP_no-target_10steps_context20_predict40/model000200000.pt  # without target cond
+  cfg_param: 5
+save_motion:
   save_hml_episodes: False
   save_hml_episodes_dir: ''
-  max_saved_hml_episodes: 10000
+  save_name_suffix: ''
+  max_saved_hml_episodes: 20000
+  prefix_crop_size: 16
 
 support_phc_markers: True
